# library

./: README.md  alembic.ini  main.py  pyproject.toml
auth/: jwt_auth.py  utils.py
authors/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
books/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  authors.py  books.py  db_helper.py  user_book.py  users.py
issuance/: schemas.py
migrations/versions/: 2025_01_21_1917-0d37290c1bce_init.py  2025_01_21_2034-6b9af22a7060_create_table_issuance.py
users/: crud.py  schemas.py  views.py
